--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -14,10 +14,13 @@
 
 set (REQUIRED_CISST_LIBRARIES
      cisstCommon
+     cisstCommonXML
      cisstVector
      cisstOSAbstraction
      cisstMultiTask
-     cisstParameterTypes)
+     cisstParameterTypes
+     cisstRobot
+     cisstNumerical)
 
 find_package (cisst REQUIRED ${REQUIRED_CISST_LIBRARIES})
 
@@ -29,18 +32,24 @@ if (cisst_FOUND)
   # sawRobotIO1394 has been compiled within cisst, we should find it automatically
   cisst_find_saw_component (sawRobotIO1394 REQUIRED)
   cisst_find_saw_component (sawControllers REQUIRED)
+  cisst_find_saw_component (sawConstraintController REQUIRED)
   cisst_find_saw_component (sawIntuitiveResearchKit REQUIRED)
+  cisst_find_saw_component (sawNRIExperiment REQUIRED)
 
-  if (sawRobotIO1394_FOUND AND sawControllers_FOUND AND sawIntuitiveResearchKit_FOUND)
+  if (sawRobotIO1394_FOUND AND sawControllers_FOUND AND sawIntuitiveResearchKit_FOUND AND sawConstraintController_FOUND)
 
     # sawRobotIO1394 configuration
     include_directories (${sawRobotIO1394_INCLUDE_DIR}
                          ${sawControllers_INCLUDE_DIR}
-                         ${sawIntuitiveResearchKit_INCLUDE_DIR})
+                         ${sawConstraintController_INCLUDE_DIR}
+                         ${sawIntuitiveResearchKit_INCLUDE_DIR}
+                         ${sawNRIExperiment_INCLUDE_DIR})
                        
-    link_directories (${sawRobotIO1394_LIBRARY_DIR}
+    link_directories (${sawIntuitiveResearchKit_LIBRARY_DIR}
+                      ${sawRobotIO1394_LIBRARY_DIR}
                       ${sawControllers_LIBRARY_DIR}
-                      ${sawIntuitiveResearchKit_LIBRARY_DIR})
+                      ${sawConstraintController_LIBRARY_DIR}
+                      ${sawNRIExperiment_LIBRARY_DIR})
 
     # create/configure file for find_package (sawUDPPSM)
     set (sawUDPPSM_INCLUDE_DIR "${sawUDPPSM_SOURCE_DIR}/include")
@@ -52,10 +61,14 @@ if (cisst_FOUND)
 
     set (HEADER_FILES
          ${sawUDPPSM_HEADER_DIR}/mtsUDPPSM.h
+         #${sawUDPPSM_HEADER_DIR}/mtsUDPOptimizer.h
+         #${sawUDPPSM_HEADER_DIR}/mtsVFResolveRates.h
         )
 
     set (SOURCE_FILES
          mtsUDPPSM.cpp
+         #mtsUDPOptimizer.cpp
+         #mtsVFResolveRates.cpp
         )
 
     add_library (sawUDPPSM ${HEADER_FILES} ${SOURCE_FILES})
@@ -64,9 +77,11 @@ if (cisst_FOUND)
 
     # link against non cisst libraries and cisst components
     target_link_libraries (sawUDPPSM
+                           ${sawNRIExperiment_LIBRARIES}
+                           ${sawIntuitiveResearchKit_LIBRARIES}
+                           ${sawConstraintController_LIBRARIES}
                            ${sawRobotIO1394_LIBRARIES}
                            ${sawControllers_LIBRARIES}
-                           ${sawIntuitiveResearchKit_LIBRARIES}
                            )
 
     set (sawUDPPSM_LIBRARIES ${sawUDPPSM_LIBRARIES})
@@ -90,6 +105,6 @@ if (cisst_FOUND)
     install (FILES "${sawUDPPSM_BINARY_DIR}/sawUDPPSMConfig.cmake"
              DESTINATION "${CISST_CMAKE_INSTALL_SUFFIX}/saw")
 
-  endif (sawRobotIO1394_FOUND AND sawControllers_FOUND AND sawIntuitiveResearchKit_FOUND)
+  endif (sawRobotIO1394_FOUND AND sawControllers_FOUND AND sawIntuitiveResearchKit_FOUND AND sawConstraintController_FOUND)
 
 endif (cisst_FOUND)
