--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,5 @@
-#
-# $Id: CMakeLists.txt 4191 2013-05-16 20:16:25Z adeguet1 $
-#
-# (C) Copyright 2009-2013 Johns Hopkins University (JHU), All Rights Reserved.
-#
-# --- begin cisst license - do not edit ---
-#
-# This software is provided "as is" under an open source license, with
-# no warranty.  The complete license can be found in license.txt and
-# http://www.cisst.org/cisst/license.txt.
-#
-# --- end cisst license ---
+cmake_minimum_required (VERSION 2.8)
 
-# project name
 project (sawUDPPSM)
 
-add_subdirectory (code)
-#add_subdirectory (examples)
+add_subdirectory (src)
